# prelegall

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py
backend/app/routers/: auth.py  chat.py  documents.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py
data/templates/: employment_contract.json  freelance_contract.json  index.json  lease_agreement.json  nda.json  partnership_agreement.json  sales_contract.json  service_agreement.json  software_license.json
frontend/: package-lock.json  package.json
frontend/.claude/: settings.local.json
frontend/__tests__/: renderTemplate.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthModal.tsx  CloudServiceAgreementPreview.tsx  DocChat.tsx  DocumentCreator.tsx  GenericDocPreview.tsx  MyDocumentsModal.tsx  NdaChat.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx  PilotAgreementPreview.tsx  SignatureSection.tsx  UserMenu.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: cloudServiceAgreementTemplate.ts  documentRegistry.ts  genericTemplates.ts  mutualNdaTemplate.ts  pilotAgreementTemplate.ts  renderTemplate.ts
scripts/: start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
